Update legend for model figure equation panel

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1576,28 +1576,44 @@ of the germ band.</figcaption>
 <div id="fig:model" class="fignos">
 <figure>
 <img src="figures/Fig3.jpg" style="width:100.0%"
-alt="Figure 3: Model and simulations of the tissue mechanics at the head–trunk boundary. a, Region of interest of the model as a frontal slice of one side of the embryonic blastoderm respecting the embryo proportions and positions of mitotic domains, cephalic furrow, and germ band.  b, Components of the model using particles connected by springs and their individual characteristics. c, Energy equation of the system is the sum of stretching energy and bending energy. The ratio of the two adjusted for the embryo radius gives a dimensionless bending rigidity, the main parameter of the model. d, Plots showing the energy dynamics across iterations in a typical simulation run. The stretching energy dominates and goes down with the iterations. The bending energy, which is a few orders of magnitude lower, increases drastically reaching a peak that diminishes gradually with the iterations. The total energy of the system goes down to equilibrium. e, Distance of individual particles to the vitelline envelope (depth) at basal noise levels with different bending rigidities. The maximum value of the standard deviation is highlighted in magenta. The dashed line indicates the threshold used to define the minimal distance for considering that the tissue has folded. f, Mutant parameter sweep without mitotic domains (no cephalic furrow). The heatmap shows the average number of ectopic folds for different bending rigidities and percentages of germ band extension. Ectopic folding frequency increases with lower bending rigidities (softer tissue) and with greater values of germ band extension. g, Mutant parameter sweep with mitotic domains (no cephalic furrow). The phase diagram is shifted left in relation to f. The addition of mitotic domains maximizes the formation of ectopic folds even without germ band extension. h, Average number of folds by bending rigidity without germ band extension. The arrows point to the bending rigidity value of 8.0\times10^{−5} where the maximum standard deviation is lower than one fold. This value is used as a reference for subsequent simulations. i, Average cephalic furrow depth by percentage of germ band extension at the end of all iterations. The plot shows the depth correlates with the germ band position. j, Quantification of ectopic folding to evaluate the effectiveness of the cephalic furrow. The top row shows a control simulating a cephalic furrow mutant condition with mitotic domains and germ band. The middle row shows an active cephalic furrow invagination with mitotic domains forming at the same time without delay. The bottom row shows the cephalic furrow with a delay in mitotic domain formation. k, Representative seeds from the simulations in j at 0 and 40% germ band extension." />
+alt="Figure 3: Model and simulations of the tissue mechanics at the head–trunk boundary. a, Region of interest of the model. One side of a frontal slice across a slightly dorsal plane of the embryonic blastoderm. It follows the embryo shape, its proportions, and the relative positions of mitotic domains, cephalic furrow, and germ band. b, Characteristics of the individual components of the model based on particles connected by springs. The drawings exemplify the initial and final states for each component. c, Energy equation with a stretching and a bending component, and the dimensionless bending rigidity. Inital rod length (L_{o}), stretching energy (W_{s}), stretching rigidity (K_{s}), initial spring length (ds_{o}), current spring length (ds), bending energy (W_{b}), bending rigidity (K_{b}), initial curvature (\kappa_{o}), current curvature (\kappa), semi-major embryonic axis (L). d, Plots showing the energy dynamics across iterations in a typical simulation run. The stretching energy dominates and goes down with the iterations. The bending energy, which is a few orders of magnitude lower, increases drastically reaching a peak that diminishes gradually with the iterations. The total energy of the system goes down to equilibrium. e, Distance of individual particles to the vitelline envelope (depth) at basal noise levels with different bending rigidities. The maximum value of the standard deviation is highlighted in magenta. The dashed line indicates the threshold used to define the minimal distance for considering that the tissue has folded. f, Mutant parameter sweep without mitotic domains (no cephalic furrow). The heatmap shows the average number of ectopic folds for different bending rigidities and percentages of germ band extension. Ectopic folding frequency increases with lower bending rigidities (softer tissue) and with greater values of germ band extension. g, Mutant parameter sweep with mitotic domains (no cephalic furrow). The phase diagram is shifted left in relation to f. The addition of mitotic domains maximizes the formation of ectopic folds even without germ band extension. h, Average number of folds by bending rigidity without germ band extension. The arrows point to the bending rigidity value of 8.0\times10^{−5} where the maximum standard deviation is lower than one fold. This value is used as a reference for subsequent simulations. i, Average cephalic furrow depth by percentage of germ band extension at the end of all iterations. The plot shows the depth correlates with the germ band position. j, Quantification of ectopic folding to evaluate the effectiveness of the cephalic furrow. The top row shows a control simulating a cephalic furrow mutant condition with mitotic domains and germ band. The middle row shows an active cephalic furrow invagination with mitotic domains forming at the same time without delay. The bottom row shows the cephalic furrow with a delay in mitotic domain formation. k, Representative seeds from the simulations in j at 0 and 40% germ band extension." />
 <figcaption aria-hidden="true"><span>Figure 3:</span> Model and
 simulations of the tissue mechanics at the head–trunk boundary.
-<strong>a</strong>, Region of interest of the model as a frontal slice
-of one side of the embryonic blastoderm respecting the embryo
-proportions and positions of mitotic domains, cephalic furrow, and germ
-band. <!--TODO:AS: Replace final by target--> <strong>b</strong>,
-Components of the model using particles connected by springs and their
-individual characteristics. <strong>c</strong>, Energy equation of the
-system is the sum of stretching energy and bending energy. The ratio of
-the two adjusted for the embryo radius gives a dimensionless bending
-rigidity, the main parameter of the model. <strong>d</strong>, Plots
-showing the energy dynamics across iterations in a typical simulation
-run. The stretching energy dominates and goes down with the iterations.
-The bending energy, which is a few orders of magnitude lower, increases
-drastically reaching a peak that diminishes gradually with the
-iterations. The total energy of the system goes down to equilibrium.
-<strong>e</strong>, Distance of individual particles to the vitelline
-envelope (depth) at basal noise levels with different bending
-rigidities. The maximum value of the standard deviation is highlighted
-in magenta. The dashed line indicates the threshold used to define the
-minimal distance for considering that the tissue has folded.
+<strong>a</strong>, Region of interest of the model. One side of a
+frontal slice across a slightly dorsal plane of the embryonic
+blastoderm. It follows the embryo shape, its proportions, and the
+relative positions of mitotic domains, cephalic furrow, and germ band.
+<strong>b</strong>, Characteristics of the individual components of the
+model based on particles connected by springs. The drawings exemplify
+the initial and final states for each component. <strong>c</strong>,
+Energy equation with a stretching and a bending component, and the
+dimensionless bending rigidity. Inital rod length (<span
+class="math inline"><em>L</em><sub><em>o</em></sub></span>), stretching
+energy (<span
+class="math inline"><em>W</em><sub><em>s</em></sub></span>), stretching
+rigidity (<span
+class="math inline"><em>K</em><sub><em>s</em></sub></span>), initial
+spring length (<span
+class="math inline"><em>d</em><em>s</em><sub><em>o</em></sub></span>),
+current spring length (<span
+class="math inline"><em>d</em><em>s</em></span>), bending energy (<span
+class="math inline"><em>W</em><sub><em>b</em></sub></span>), bending
+rigidity (<span
+class="math inline"><em>K</em><sub><em>b</em></sub></span>), initial
+curvature (<span
+class="math inline"><em>κ</em><sub><em>o</em></sub></span>), current
+curvature (<span class="math inline"><em>κ</em></span>), semi-major
+embryonic axis (<span class="math inline"><em>L</em></span>).
+<strong>d</strong>, Plots showing the energy dynamics across iterations
+in a typical simulation run. The stretching energy dominates and goes
+down with the iterations. The bending energy, which is a few orders of
+magnitude lower, increases drastically reaching a peak that diminishes
+gradually with the iterations. The total energy of the system goes down
+to equilibrium. <strong>e</strong>, Distance of individual particles to
+the vitelline envelope (depth) at basal noise levels with different
+bending rigidities. The maximum value of the standard deviation is
+highlighted in magenta. The dashed line indicates the threshold used to
+define the minimal distance for considering that the tissue has folded.
 <strong>f</strong>, Mutant parameter sweep without mitotic domains (no
 cephalic furrow). The heatmap shows the average number of ectopic folds
 for different bending rigidities and percentages of germ band extension.
