Fix gene's superscripts

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -855,15 +855,16 @@ added the membrane marker on chromosome 3 (<em>btd<sup>XA</sup>/FM7c,
 Kr-GFP;; Gap43-mCherry/MKRS</em> and <em>eve<sup>3</sup>/CyO, twi-GFP;
 Gap43-mCherry/MKRS</em>). For <em>stg</em>, which is located on
 chromosome 3, we recombined the allele with Gap (<em>Gap43-mCherry,
-stg[2]/TM3, Kr-GFP</em>). Since the <em>btd</em>–<em>stg</em> double
-mutant stable line is weak, we imaged the progeny of <em>btd[XA]/FM7c,
-Kr-GFP;; Gap43-mCherry, stg[2]/Gap43-mCherry</em> flies, identifying
-<em>btd</em> homozygozity by the GFP, and <em>stg</em> homozygozity by
-the lack of cell divisions after gastrulation. The wildtype stocks
-contain the Gap marker in the Oregon-R genetic background. We obtained
-the founder fly stocks from the Bloomington Drosophila Stock Center and
-the Kyoto Stock Center and deposited the lines in the MPI-CBG stock
-collection. The complete list of FlyBase<span class="citation"
+stg<sup>2</sup>/TM3, Kr-GFP</em>). Since the <em>btd</em>–<em>stg</em>
+double mutant stable line is weak, we imaged the progeny of
+<em>btd<sup>XA</sup>/FM7c, Kr-GFP;; Gap43-mCherry,
+stg<sup>2</sup>/Gap43-mCherry</em> flies, identifying <em>btd</em>
+homozygozity by the GFP, and <em>stg</em> homozygozity by the lack of
+cell divisions after gastrulation. The wildtype stocks contain the Gap
+marker in the Oregon-R genetic background. We obtained the founder fly
+stocks from the Bloomington Drosophila Stock Center and the Kyoto Stock
+Center and deposited the lines in the MPI-CBG stock collection. The
+complete list of FlyBase<span class="citation"
 data-cites="Gramates2022-xe"><sup><a href="#ref-Gramates2022-xe"
 role="doc-biblioref">24</a></sup></span> accession numbers and genotypes
 is available in the project’s data repository<span class="citation"
